--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <st-book></st-book>
+  <st-binding></st-binding>
 </body>
 </html>
